# my_hft

./: CMakeLists.txt  README.md  example.py  hft_demo.ipynb  network_demo.ipynb  order_book_sim_demo.ipynb  setup.py  simulator.py  slippage_demo.ipynb
include/: hft_core.h
python/: bindings.cpp
src/: order_book.cpp
